# -Quarkboard-CLI

./: .gitignore  .gitlab-ci.yml  DEVELOPMENT.md  README.md  pyproject.toml  setup.cfg
.githooks/: commit-msg  pre-commit  pre-push
docs/source/: conf.py  index.rst
src/quarkboard/: __init__.py  __main__.py  constants.py
src/quarkboard/data/: __init__.py  tasks.py
src/quarkboard/models/: base.py  engine.py  oauth.py  project.py  task.py  user.py
src/quarkboard/models/static/: __init__.py  estimation.py  planning.py  stability.py  status.py
src/quarkboard/tui/: __init__.py  kanban.py
tests/data/: test_tasks.py
tests/tui/: test_kanban.py
